--- a/index.html
+++ b/index.html
@@ -5,60 +5,91 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Qubit</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+      integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <!-- HEADER -->
-    <header>
+    <header class="container header flex">
       <div>
         <img src="./img/logo.svg" alt="logo" class="logo" />
       </div>
-      <nav>
-        <ul>
-          <li><a href="#">Why Qubit?</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Solutions</a></li>
-          <li><a href="#">Customers</a></li>
+      <nav class="header-nav">
+        <ul class="header-ul">
+          <li class="header-li">
+            <a class="header-link" href="#">Why Qubit?</a>
+          </li>
+          <li class="header-li">
+            <a class="header-link" href="#">Products</a>
+          </li>
+          <li class="header-li">
+            <a class="header-link" href="#">Solutions</a>
+          </li>
+          <li class="header-li">
+            <a class="header-link" href="#">Customers</a>
+          </li>
         </ul>
       </nav>
-      <div><button>Book a demo</button></div>
+      <div><button class="button">Book a demo</button></div>
     </header>
     <!-- /HEADER -->
     <!-- MAIN -->
     <main>
-      <section>
-        <div>
-          <h1>
-            Make ecommerce <br />
-            <span>More personal.</span>
-          </h1>
-          <p>
-            Hundreds of brands use <b>Qubit CommerceAI</b> to power the next
-            generation of product recommendations, badging and insights to build
-            exceptional customer experiences.
-          </p>
-          <form action="#">
-            <input type="email" placeholder="Enter your email" /><button>
-              Book a demo
-            </button>
-          </form>
-        </div>
-        <div>
-          <img src="./img/IMAGE.svg" alt="hand" width="436px" />
+      <section class="main">
+        <div class="container flex">
+          <div>
+            <h1 class="main-title">
+              Make ecommerce
+              <span class="main-title main-title-violet">More personal.</span>
+            </h1>
+            <p class="main-text">
+              Hundreds of brands use
+              <span class="main-text-bold">Qubit CommerceAI</span> to power the
+              next generation of product recommendations, badging and insights
+              to build exceptional customer experiences.
+            </p>
+            <form action="#">
+              <input
+                class="main-input"
+                type="email"
+                placeholder="Enter your email"
+              />
+              <button class="button main-button">Book a demo</button>
+            </form>
+          </div>
+          <div>
+            <img src="./img/IMAGE.svg" alt="hand" width="436px" />
+          </div>
         </div>
       </section>
     </main>
     <!-- /MAIN -->
     <!-- FOOTER -->
-    <footer>
-      <div>
-        <ul>
-          <li><a href="#">Featured Capabilities</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Resources</a></li>
-          <li><a href="#">Company</a></li>
-        </ul>
+    <footer class="footer">
+      <div class="container flex">
+        <nav class="footer-nav">
+          <ul class="footer-ul">
+            <li class="footer-li">
+              <a class="footer-link" href="#">Featured Capabilities</a>
+            </li>
+            <li class="footer-li">
+              <a class="footer-link" href="#">Products</a>
+            </li>
+            <li class="footer-li">
+              <a class="footer-link" href="#">Resources</a>
+            </li>
+            <li class="footer-li">
+              <a class="footer-link" href="#">Company</a>
+            </li>
+          </ul>
+        </nav>
+        <div><button class="button">Book a demo</button></div>
       </div>
-      <div><button>Book a demo</button></div>
     </footer>
     <!-- /FOOTER -->
   </body>
