add section "Grow"

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <!-- /HEADER -->
     <!-- MAIN -->
     <main>
+      <!-- SECTION MAIN -->
       <section class="main">
         <div class="container flex">
           <div>
@@ -67,6 +68,32 @@
           </div>
         </div>
       </section>
+      <!-- /SECTION MAIN -->
+      <!-- SECTION GROW -->
+      <section class="container flex grow">
+        <h2 class="grow-title">Grow 2.5x faster than</h2>
+        <div class="grow-flex">
+          <div class="grow-element">
+            <img src="./img/Grow1.png" alt="image" width="333px">
+            <div class="grow-item">
+              <h3 class="grow-pretitle">RIVER ISLAND</h3>
+              <p class="grow-text">
+                River Island transforms the customer experience with personalization.
+              </p>
+            </div>
+          </div>
+          <div class="grow-element">
+            <img src="./img/Grow2.png" alt="image" width="333px">
+            <div class="grow-item">
+              <h3 class="grow-pretitle">RIVER ISLAND</h3>
+              <p class="grow-text">
+                River Island transforms the customer experience with personalization.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /SECTION GROW -->
     </main>
     <!-- /MAIN -->
     <!-- FOOTER -->
