--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <!-- /SECTION MAIN -->
       <!-- SECTION GROW -->
       <section class="container flex grow">
-        <h2 class="grow-title">Grow 2.5x faster than</h2>
+        <h2 class="grow-title">Grow 2.5x faster than your competitors.</h2>
         <div class="grow-flex">
           <div class="grow-element">
             <img src="./img/Grow1.png" alt="image" width="333px">
