--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Qubit</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
       integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="./style/style.css" />
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
     <!-- HEADER -->
@@ -64,7 +71,7 @@
             </form>
           </div>
           <div>
-            <img src="./img/IMAGE.svg" alt="hand" width="436px" />
+            <img src="./img/IMAGE.svg" alt="hand"/>
           </div>
         </div>
       </section>
@@ -74,26 +81,59 @@
         <h2 class="grow-title">Grow 2.5x faster than your competitors.</h2>
         <div class="grow-flex">
           <div class="grow-element">
-            <img src="./img/Grow1.png" alt="image" width="333px">
+            <img src="./img/Grow-1.png" alt="image"/>
             <div class="grow-item">
               <h3 class="grow-pretitle">RIVER ISLAND</h3>
               <p class="grow-text">
-                River Island transforms the customer experience with personalization.
+                River Island transforms the customer experience with
+                personalization.
               </p>
             </div>
           </div>
           <div class="grow-element">
-            <img src="./img/Grow2.png" alt="image" width="333px">
+            <img src="./img/Grow-2.png" alt="image"/>
             <div class="grow-item">
               <h3 class="grow-pretitle">RIVER ISLAND</h3>
               <p class="grow-text">
-                River Island transforms the customer experience with personalization.
+                River Island transforms the customer experience with
+                personalization.
               </p>
             </div>
           </div>
         </div>
       </section>
       <!-- /SECTION GROW -->
+      <!-- SECTION COMMERCE -->
+      <section class="container commerce">
+        <h2 class="commerce-title">Qubit CommerceAI.</h2>
+        <div class="flex">
+          <div>
+            <img src="./img/Logo-insight.svg" alt="logo" />
+            <h3 class="commerce-pretitle">More insight</h3>
+            <p class="commerce-text">
+              Learn which products drive performance and which don't, through
+              automated insights you can action.
+            </p>
+          </div>
+          <div>
+            <img src="./img/Logo-personal.svg" alt="logo" />
+            <h3 class="commerce-pretitle">More personal</h3>
+            <p class="commerce-text">
+              Qubit CommerceAI generates a model per shopper to make every
+              customer interaction more relevant.
+            </p>
+          </div>
+          <div>
+            <img src="./img/Logo-effective.svg" alt="logo" />
+            <h3 class="commerce-pretitle">More effective</h3>
+            <p class="commerce-text">
+              Qubit fuses data, intent, and design tools to enable your team to
+              create more effective customer experiences.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- /SECTION COMMERCE -->
     </main>
     <!-- /MAIN -->
     <!-- FOOTER -->
